add Reflux Logic and some Route

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -3,9 +3,10 @@
   <head>
     <title>Hello World!</title>
     <link rel="stylesheet" href="./semantic-ui/semantic.min.css">
+    <link rel="stylesheet" href="./main.css">
   </head>
   <body>
-    <source src="./semantic-ui/semantic.min.js" type="mimetype">
+    <source src="./semantic-ui/semantic.min.js">
     <script src="./main.js"></script>
   </body>
 </html>
